--- a/patches.xen/xen3-patch-3.9
+++ b/patches.xen/xen3-patch-3.9
@@ -4743,24 +4743,25 @@ Acked-by: jbeulich@suse.com
 +static void msi_unmap_pirq(struct pci_dev *dev, int pirq, unsigned int nr,
 +			   domid_t owner, struct kobject *kobj)
  {
- 	struct physdev_unmap_pirq unmap;
- 	int rc;
-@@ -218,10 +219,7 @@ static int msi_unmap_pirq(struct pci_dev
- 		? pirq : evtchn_get_xen_pirq(pirq);
+ 	if (is_initial_xendomain()) {
+ 		struct physdev_unmap_pirq unmap;
+@@ -219,10 +220,8 @@ static int msi_unmap_pirq(struct pci_dev
+ 			? pirq : evtchn_get_xen_pirq(pirq);
  
- 	if ((rc = HYPERVISOR_physdev_op(PHYSDEVOP_unmap_pirq, &unmap)))
--		dev_warn(&dev->dev, "unmap irq %d failed\n", pirq);
+ 		if ((rc = HYPERVISOR_physdev_op(PHYSDEVOP_unmap_pirq, &unmap)))
+-			dev_warn(&dev->dev, "unmap irq %d failed\n", pirq);
 -
--	if (rc < 0)
--		return rc;
-+		dev_warn(&dev->dev, "unmap irq %d failed (%d)\n", pirq, rc);
+-		if (rc < 0)
+-			return rc;
++			dev_warn(&dev->dev, "unmap irq %d failed (%d)\n",
++				 pirq, rc);
+ 	} else
+ 		owner = DOMID_SELF;
  
- 	/*
- 	 * Its possible that we get into this path when populate_msi_sysfs()
-@@ -234,9 +232,7 @@ static int msi_unmap_pirq(struct pci_dev
+@@ -237,9 +236,7 @@ static int msi_unmap_pirq(struct pci_dev
  	}
  
- 	if (unmap.domid == DOMID_SELF)
+ 	if (owner == DOMID_SELF)
 -		evtchn_map_pirq(pirq, 0);
 -
 -	return 0;
@@ -4768,7 +4769,7 @@ Acked-by: jbeulich@suse.com
  }
  
  static u64 find_table_base(struct pci_dev *dev, int pos)
-@@ -267,7 +263,10 @@ static int msi_map_vector(struct pci_dev
+@@ -270,7 +267,10 @@ static int msi_map_vector(struct pci_dev
  	int rc = -EINVAL;
  
  	map_irq.domid = domid;
@@ -4780,7 +4781,7 @@ Acked-by: jbeulich@suse.com
  	map_irq.index = -1;
  	map_irq.pirq = -1;
  	map_irq.bus = dev->bus->number | (pci_domain_nr(dev->bus) << 16);
-@@ -277,6 +276,12 @@ static int msi_map_vector(struct pci_dev
+@@ -280,6 +280,12 @@ static int msi_map_vector(struct pci_dev
  
  	if (pci_seg_supported)
  		rc = HYPERVISOR_physdev_op(PHYSDEVOP_map_pirq, &map_irq);
@@ -4793,7 +4794,7 @@ Acked-by: jbeulich@suse.com
  #if CONFIG_XEN_COMPAT < 0x040200
  	if (rc == -EINVAL && !pci_domain_nr(dev->bus)) {
  		map_irq.type = MAP_PIRQ_TYPE_MSI;
-@@ -285,7 +290,7 @@ static int msi_map_vector(struct pci_dev
+@@ -288,7 +294,7 @@ static int msi_map_vector(struct pci_dev
  		map_irq.bus = dev->bus->number;
  		rc = HYPERVISOR_physdev_op(PHYSDEVOP_map_pirq, &map_irq);
  		if (rc != -EINVAL)
@@ -4802,7 +4803,7 @@ Acked-by: jbeulich@suse.com
  	}
  #endif
  	if (rc)
-@@ -299,20 +304,35 @@ static int msi_map_vector(struct pci_dev
+@@ -302,20 +308,35 @@ static int msi_map_vector(struct pci_dev
  
  	BUG_ON(map_irq.pirq <= 0);
  
@@ -4844,7 +4845,7 @@ Acked-by: jbeulich@suse.com
  	return map_irq.pirq;
  }
  
-@@ -527,9 +547,10 @@ static int msi_capability_init(struct pc
+@@ -530,9 +551,10 @@ static int msi_capability_init(struct pc
  	pos = pci_find_capability(dev, PCI_CAP_ID_MSI);
  	msi_set_enable(dev, pos, 0);	/* Disable MSI during set up */
  
@@ -4857,7 +4858,7 @@ Acked-by: jbeulich@suse.com
  
  	/* Set MSI enabled bits	 */
  	pci_intx_for_msi(dev, 0);
-@@ -610,7 +631,7 @@ static int msix_capability_init(struct p
+@@ -613,7 +635,7 @@ static int msix_capability_init(struct p
  			list_for_each_entry(pirq_entry, &dev->msi_list, list)
  				if (pirq_entry->entry_nr == entries[j].entry)
  					break;
@@ -4866,7 +4867,7 @@ Acked-by: jbeulich@suse.com
  				       msi_dev_entry->owner,
  				       &pirq_entry->kobj);
  			detach_pirq_entry(entries[j].entry, msi_dev_entry);
-@@ -706,7 +727,10 @@ int pci_enable_msi_block(struct pci_dev
+@@ -709,7 +731,10 @@ int pci_enable_msi_block(struct pci_dev
  	if (!pos)
  		return -EINVAL;
  	pci_read_config_word(dev, pos + PCI_MSI_FLAGS, &msgctl);
@@ -4878,7 +4879,7 @@ Acked-by: jbeulich@suse.com
  	if (nvec > maxvec)
  		return maxvec;
  
-@@ -719,11 +743,12 @@ int pci_enable_msi_block(struct pci_dev
+@@ -722,11 +747,12 @@ int pci_enable_msi_block(struct pci_dev
  		int ret;
  
  		temp = dev->irq;
@@ -4893,7 +4894,7 @@ Acked-by: jbeulich@suse.com
  		dev->msi_enabled = 1;
  		msi_dev_entry->default_irq = temp;
  		populate_msi_sysfs(dev);
-@@ -745,11 +770,39 @@ int pci_enable_msi_block(struct pci_dev
+@@ -748,11 +774,39 @@ int pci_enable_msi_block(struct pci_dev
  	status = msi_capability_init(dev, nvec);
  	if ( !status )
  		msi_dev_entry->default_irq = temp;
@@ -4933,16 +4934,7 @@ Acked-by: jbeulich@suse.com
  void pci_msi_shutdown(struct pci_dev *dev)
  {
  	int pirq, pos;
-@@ -760,7 +813,7 @@ void pci_msi_shutdown(struct pci_dev *de
- 
- 	if (!is_initial_xendomain()) {
- #ifdef CONFIG_XEN_PCIDEV_FRONTEND
--		evtchn_map_pirq(dev->irq, 0);
-+		evtchn_map_pirq(dev->irq, 0, -msi_dev_entry->e.entry_nr);
- 		pci_frontend_disable_msi(dev);
- 		dev->irq = msi_dev_entry->default_irq;
- 		dev->msi_enabled = 0;
-@@ -771,8 +824,8 @@ void pci_msi_shutdown(struct pci_dev *de
+@@ -771,8 +825,8 @@ void pci_msi_shutdown(struct pci_dev *de
  	pirq = dev->irq;
  	/* Restore dev->irq to its default pin-assertion vector */
  	dev->irq = msi_dev_entry->default_irq;
@@ -4953,7 +4945,7 @@ Acked-by: jbeulich@suse.com
  	msi_dev_entry->owner = DOMID_IO;
  	memset(&msi_dev_entry->e.kobj, 0, sizeof(msi_dev_entry->e.kobj));
  
-@@ -861,7 +914,7 @@ int pci_enable_msix(struct pci_dev *dev,
+@@ -863,7 +917,7 @@ int pci_enable_msix(struct pci_dev *dev,
  			}
  			if (mapped)
  				continue;
@@ -4962,21 +4954,16 @@ Acked-by: jbeulich@suse.com
  			attach_pirq_entry(irq, entries[i].entry, msi_dev_entry);
  			entries[i].vector = irq;
  		}
-@@ -969,11 +1022,11 @@ void msi_remove_pci_irq_vectors(struct p
+@@ -970,7 +1024,7 @@ void msi_remove_pci_irq_vectors(struct p
+ 		spin_unlock_irqrestore(&msi_dev_entry->pirq_list_lock, flags);
  		if (!pirq_entry)
  			break;
- 		if (is_initial_xendomain())
--			msi_unmap_pirq(dev, pirq_entry->pirq,
-+			msi_unmap_pirq(dev, pirq_entry->pirq, 1,
- 				       msi_dev_entry->owner,
- 				       &pirq_entry->kobj);
- 		else
--			evtchn_map_pirq(pirq_entry->pirq, 0);
-+			evtchn_map_pirq(pirq_entry->pirq, 0, 1);
+-		msi_unmap_pirq(dev, pirq_entry->pirq,
++		msi_unmap_pirq(dev, pirq_entry->pirq, 1,
+ 			       msi_dev_entry->owner,
+ 			       &pirq_entry->kobj);
  		kfree(pirq_entry);
- 	}
- 	msi_dev_entry->owner = DOMID_IO;
-@@ -982,7 +1035,7 @@ void msi_remove_pci_irq_vectors(struct p
+@@ -981,7 +1035,7 @@ void msi_remove_pci_irq_vectors(struct p
  
  void pci_no_msi(void)
  {
